💘🐁 Updated with Glitch rewording in index file

--- a/views/index.html
+++ b/views/index.html
@@ -31,8 +31,8 @@
         <h3>Example Usage:</h3>
         <ul>
           <li>
-            <code>GET [project url]/api/timestamp/2015-12-25</code></li>
-          <li><code>GET project url]/api/timestamp/1450137600</code></li>
+            <code>https://tasty-passbook.glitch.me/api/timestamp/2015-12-25</code></li>
+          <li><code>https://tasty-passbook.glitch.me/api/timestamp/1450137600</code></li>
         </ul>
 
         <h3>Example Output:</h3>
@@ -42,7 +42,9 @@
       </div>
       <div class="footer">
          <p>
-          <a href="https://glitch.com/edit/#!/tasty-passbook">Click here to see source code Of Timestamp Microservice API</a>
+           By
+          <a href="https://github.com/SadiaWaleem/timestamp_microservice_api">Sadia</a>
+          <a href="https://glitch.com/edit/#!/tasty-passbook">Click here to see source code Of Timestamp Microservice API on Glitch</a> 
         </p>
       </div>
    </body>
